--- a/index.html
+++ b/index.html
@@ -81,40 +81,144 @@
                       <img src="images/players/player-8.png" alt="">
                       <div class="player-details">
                           <h2>Kylian Mbappe</h2>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum placeat officiis eveniet dolorem quidem quos nobis velit et obcaecati quas!</p>
+                          <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
                       </div>
                   </div>
                   <div class="player">
                       <img src="images/players/player-9.png" alt="">
                       <div class="player-details">
                           <h2>Mohamed Salah</h2>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum placeat officiis eveniet dolorem quidem quos nobis velit et obcaecati quas!</p>
+                          <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
                       </div>
                   </div>
                   <div class="player">
                       <img src="images/players/player-10.png" alt="">
                       <div class="player-details">
                           <h2>Harry Kane</h2>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum placeat officiis eveniet dolorem quidem quos nobis velit et obcaecati quas!</p>
+                          <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. </p>
                       </div>
                   </div>
                   <div class="player">
                       <img src="images/players/player-11.png" alt="">
                       <div class="player-details">
                           <h2>Kevin De Bruyne</h2>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum placeat officiis eveniet dolorem quidem quos nobis velit et obcaecati quas!</p>
+                          <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
                       </div>
                   </div>
                   <div class="player">
                       <img src="images/players/player-12.png" alt="">
                       <div class="player-details">
                           <h2>Philippe Coutinho</h2>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum placeat officiis eveniet dolorem quidem quos nobis velit et obcaecati quas!</p>
+                          <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. </p>
                       </div>
                   </div>
             </div>
         </div>
     </section>
+    <!-----------
+         extra section 
+         -------->
+    <section class="extra-container">
+        <div class="jersy-gallery">
+                 <h2>Favourite Team Kits</h2>
+                 <div class="kit-gallery">
+                 <div class="kits">
+                     <img src="images/kits/juventus.jpg" alt="">
+                     <h3>Jeventus Kits</h3>
+                     <p>Price : 10$</p>
+                 </div>
+                 <div class="kits">
+                     <img src="images/kits/chelsea-k.jpg" alt="">
+                     <h3>Chelsea Kits</h3>
+                     <p>Price : 10$</p>
+                 </div>
+                 <div class="kits">
+                     <img src="images/kits/psg.jpg" alt="">
+                     <h3>Psg Kits</h3>
+                     <p>Price : 10$</p>
+                 </div>
+                 <div class="kits">
+                     <img src="images/kits/real-madrid.jpg" alt="">
+                     <h3>Real-Madrid Kits</h3>
+                     <p>Price : 10$</p>
+                 </div>
+                 <div class="kits">
+                     <img src="images/kits/bercelona.jpg" alt="">
+                     <h3>Barcelona Kits</h3>
+                     <p>Price : 10$</p>
+                 </div>
+                 <div class="kits">
+                     <img src="images/kits/totamham.jpg" alt="">
+                     <h3>Tottemham Kits</h3>
+                     <p>Price : 10$</p>
+                 </div>
+            </div>
+        </div>
+    </section>
+    <!--------------
+         football fan shop 
+        ------------------->
+    <section class="shop-container">
+        <div class="fan-shop">
+            <h2>More From This Shop</h2>
+            <div class="products-item">
+                <div class="shop">
+                    <div class="products">
+                        <img src="images/shop/football-boot.jpg" alt="">
+                    </div>
+                    
+                    <div class="item-details">
+                        <h2>Nike Football Boot</h2>
+                        <p>45$</p>
+                        <div class="rating">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop">
+                    <div class="products">
+                        <img src="images/shop/football.jpg" alt="">
+                    </div>
+                    
+                    <div class="item-details">
+                        <h2>Euro cup Football</h2>
+                        <p>45$</p>
+                        <div class="rating">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop">
+                    <div class="products">
+                        <img src="images/shop/mask.jpg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>Juventus Mask</h2>
+                        <p>11$</p>
+                        <div class="rating">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- ---------
+        footer section 
+    ------------------- -->
     <footer>
         <div class="football-logo">
             <img src="images/Logo.png" width="350px" height="150px" alt="">
