--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
+                        <a href="">Order Now</a>
                     </div>
                 </div>
                 <div class="shop">
@@ -194,6 +195,7 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
+                        <a href="">Order Now</a>
                     </div>
                 </div>
                 <div class="shop">
@@ -210,6 +212,58 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+                <div class="shop">
+                    <div class="products">
+                        <img src="images/shop/bag.jpg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>ADVANCE SCHOOL BAG</h2>
+                        <p>€57.90</p>
+                        <div class="rating">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+                <div class="shop">
+                    <div class="products">
+                        <img src="images/shop/Mug.jpg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>BLACK ICON MUG</h2>
+                        <p>€14.90</p>
+                        <div class="rating">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+                <div class="shop">
+                    <div class="products">
+                        <img src="images/shop/sandel.jpg" alt="">
+                    </div>
+                    <div class="item-details">
+                        <h2>AQUA ADILETTE SLIDES</h2>
+                        <p>€29.95 </p>
+                        <div class="rating">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <a href="">Order Now</a>
                     </div>
                 </div>
             </div>
