--- a/index.html
+++ b/index.html
@@ -125,32 +125,32 @@
                  <div class="kits">
                      <img src="images/kits/juventus.jpg" alt="">
                      <h3>Jeventus Kits</h3>
-                     <p>Price : 10$</p>
+                     <p>Price : €95.00</p>
                  </div>
                  <div class="kits">
                      <img src="images/kits/chelsea-k.jpg" alt="">
                      <h3>Chelsea Kits</h3>
-                     <p>Price : 10$</p>
+                     <p>Price : €95.00</p>
                  </div>
                  <div class="kits">
                      <img src="images/kits/psg.jpg" alt="">
                      <h3>Psg Kits</h3>
-                     <p>Price : 10$</p>
+                     <p>Price : €95.00</p>
                  </div>
                  <div class="kits">
                      <img src="images/kits/real-madrid.jpg" alt="">
                      <h3>Real-Madrid Kits</h3>
-                     <p>Price : 10$</p>
+                     <p>Price : €99.00</p>
                  </div>
                  <div class="kits">
                      <img src="images/kits/bercelona.jpg" alt="">
                      <h3>Barcelona Kits</h3>
-                     <p>Price : 10$</p>
+                     <p>Price : €91.00</p>
                  </div>
                  <div class="kits">
                      <img src="images/kits/totamham.jpg" alt="">
                      <h3>Tottemham Kits</h3>
-                     <p>Price : 10$</p>
+                     <p>Price : €85.00</p>
                  </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
                     
                     <div class="item-details">
                         <h2>Nike Football Boot</h2>
-                        <p>45$</p>
+                        <p>€50.90</p>
                         <div class="rating">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -177,17 +177,17 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
-                        <a href="">Order Now</a>
+                        <a href="https://www.facebook.com/Juventus/">Order Now</a>
                     </div>
                 </div>
                 <div class="shop">
                     <div class="products">
-                        <img src="images/shop/football.jpg" alt="">
+                        <img src="images/shop/uefa.jpg" alt="">
                     </div>
                     
                     <div class="item-details">
                         <h2>Euro cup Football</h2>
-                        <p>45$</p>
+                        <p>€45.90</p>
                         <div class="rating">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -204,7 +204,7 @@
                     </div>
                     <div class="item-details">
                         <h2>Juventus Mask</h2>
-                        <p>11$</p>
+                        <p>€11.90</p>
                         <div class="rating">
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star filled"></i>
@@ -212,7 +212,7 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
-                        <a href="">Order Now</a>
+                        <a href="https://www.facebook.com/Juventus/">Order Now</a>
                     </div>
                 </div>
                 <div class="shop">
@@ -229,7 +229,7 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
-                        <a href="">Order Now</a>
+                        <a href="https://www.facebook.com/Juventus/">Order Now</a>
                     </div>
                 </div>
                 <div class="shop">
@@ -263,7 +263,7 @@
                             <i class="fas fa-star filled"></i>
                             <i class="fas fa-star empty"></i>
                         </div>
-                        <a href="">Order Now</a>
+                        <a href="https://www.facebook.com/Juventus/">Order Now</a>
                     </div>
                 </div>
             </div>
