--- a/index.html
+++ b/index.html
@@ -29,88 +29,112 @@
         <div class="top-player">
             <div class="players">
                   <div class="player">
-                      <img src="images/players/player-1.png" alt="">
-                      <div class="player-details">
-                          <h2>Neymar Jr</h2>
-                          <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club </p>
+                      <div class="profile">
+                        <img src="images/players/player-1.png" alt="">
+                        <div class="player-details">
+                            <h2>Neymar Jr</h2>
+                            <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club </p>
+                        </div>
                       </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-2.png" alt="">
-                      <div class="player-details">
-                          <h2>Lionel Messi</h2>
-                              <p>Lionel Andrés Messi (born 24 June 1987) is an Argentine professional footballer who plays as a forward and captains the Argentina national team. </p>
+                      <div class="profile">
+                        <img src="images/players/player-2.png" alt="">
+                        <div class="player-details">
+                            <h2>Lionel Messi</h2>
+                                <p>Lionel Andrés Messi (born 24 June 1987) is an Argentine professional footballer who plays as a forward and captains the Argentina national team. </p>
+                        </div>
                       </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-3.png" alt="">
-                      <div class="player-details">
-                          <h2>Cristiono Rolando</h2>
-                          <p>Cristiano Ronaldo dos Santos born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus </p>
+                      <div class="profile">
+                        <img src="images/players/player-3.png" alt="">
+                        <div class="player-details">
+                            <h2>Cristiono Rolando</h2>
+                            <p>Cristiano Ronaldo dos Santos born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus </p>
+                        </div>
                       </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-4.png" alt="">
-                      <div class="player-details">
-                          <h2>Paulo Dybala</h2>
-                          <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+                      <div class="profile">
+                        <img src="images/players/player-4.png" alt="">
+                        <div class="player-details">
+                            <h2>Paulo Dybala</h2>
+                            <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+                        </div>
                       </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-5.png" alt="">
-                      <div class="player-details">
-                          <h2>Mesut Ozil</h2>
-                          <p>Mesut Özil (born 15 October 1988) is a German professional footballer who plays as an attacking midfielder.</p>
+                      <div class="profile">
+                        <img src="images/players/player-5.png" alt="">
+                        <div class="player-details">
+                            <h2>Mesut Ozil</h2>
+                            <p>Mesut Özil (born 15 October 1988) is a German professional footballer who plays as an attacking midfielder.</p>
+                        </div>
                       </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-6.png" alt="">
-                      <div class="player-details">
-                          <h2>Mauro Icardi</h2>
-                          <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer</p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-6.png" alt="">
+                        <div class="player-details">
+                            <h2>Mauro Icardi</h2>
+                            <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer</p>
+                        </div>
+                    </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-7.png" alt="">
-                      <div class="player-details">
-                          <h2>Di Maria</h2>
-                          <p>Di Maria (born 24 June 1987) is an Argentine professional footballer who plays as a forward and captains the Argentina national team. </p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-7.png" alt="">
+                        <div class="player-details">
+                            <h2>Di Maria</h2>
+                            <p>Di Maria (born 24 June 1987) is an Argentine professional footballer who plays as a forward and captains the Argentina national team. </p>
+                        </div>
+                    </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-8.png" alt="">
-                      <div class="player-details">
-                          <h2>Kylian Mbappe</h2>
-                          <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-8.png" alt="">
+                        <div class="player-details">
+                            <h2>Kylian Mbappe</h2>
+                            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                        </div>
+                    </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-9.png" alt="">
-                      <div class="player-details">
-                          <h2>Mohamed Salah</h2>
-                          <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-9.png" alt="">
+                        <div class="player-details">
+                            <h2>Mohamed Salah</h2>
+                            <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
+                        </div>
+                    </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-10.png" alt="">
-                      <div class="player-details">
-                          <h2>Harry Kane</h2>
-                          <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. </p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-10.png" alt="">
+                        <div class="player-details">
+                            <h2>Harry Kane</h2>
+                            <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team. </p>
+                        </div>
+                    </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-11.png" alt="">
-                      <div class="player-details">
-                          <h2>Kevin De Bruyne</h2>
-                          <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-11.png" alt="">
+                        <div class="player-details">
+                            <h2>Kevin De Bruyne</h2>
+                            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
+                        </div>
+                    </div>
                   </div>
                   <div class="player">
-                      <img src="images/players/player-12.png" alt="">
-                      <div class="player-details">
-                          <h2>Philippe Coutinho</h2>
-                          <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. </p>
-                      </div>
+                    <div class="profile">
+                        <img src="images/players/player-12.png" alt="">
+                        <div class="player-details">
+                            <h2>Philippe Coutinho</h2>
+                            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. </p>
+                        </div>
+                    </div>
                   </div>
             </div>
         </div>
@@ -274,16 +298,19 @@
         footer section 
     ------------------- -->
     <footer>
-        <div class="football-logo">
-            <img src="images/Logo.png" width="350px" height="150px" alt="">
-            <div class="icon">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-youtube"></i>
+        <div class="logo-container">
+            <div class="football-logo">
+                <img src="images/Logo.png" width="350px" height="150px" alt="">
+                <div class="icon">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+                <p>Copyright <span>&copy;</span> 2022 Football</p>
             </div>
-            <p>Copyright <span>&copy;</span> 2022 Football</p>
         </div>
+      
     </footer>
 </body>
 </html>
