--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         </div>
     </section>
     <!-----------
-         extra section 
+          top leauge teams kits
          -------->
-    <section class="extra-container">
+    <section class="kits-container">
         <div class="jersy-gallery">
                  <h2>Favourite Team Kits</h2>
                  <div class="kit-gallery">
@@ -180,7 +180,7 @@
         </div>
     </section>
     <!--------------
-         football fan shop 
+         football fan shop-area
         ------------------->
     <section class="shop-container">
         <div class="fan-shop">
