--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- ----top header section  -->
-    <header>
+    <!-- ----top header section  --> 
+    <header >
         <div class="copa-container">
+            <div class="copa-section">
             <div class="copa-america">
                 <h1>Conmebol Copa America 2021</h1>
                 <a href="https://www.youtube.com/watch?v=sDFr2Yzd-8s">Watch Live <i class="fas fa-arrow-right"></i></a>
@@ -21,11 +22,13 @@
                 <img src="images/banner.png" width="500px" height="400px" alt="">
             </div>
         </div>
+        </div>
     </header>
     <!-------
          Main Section footballer data ----
         ---->
-    <section>
+        <main>
+    <section class="main-section">
         <div class="top-player">
             <div class="players">
                   <div class="player">
@@ -142,7 +145,8 @@
     <!-----------
           top leauge teams kits
          -------->
-    <section class="kits-container">
+    <section >
+        <div class="kits-container">
         <div class="jersy-gallery">
                  <h2>Favourite Team Kits</h2>
                  <div class="kit-gallery">
@@ -178,11 +182,13 @@
                  </div>
             </div>
         </div>
+    </div>
     </section>
     <!--------------
          football fan shop-area
         ------------------->
-    <section class="shop-container">
+    <section id="shop-area">
+        <div class="shop-container">
         <div class="fan-shop">
             <h2>More From This Shop</h2>
             <div class="products-item">
@@ -293,6 +299,7 @@
             </div>
         </div>
     </section>
+</main>
     <!-- ---------
         footer section 
     ------------------- -->
